# Pizzatron

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am
data/desktop/: pizzatron.desktop
etc/: Info.plist.in  Makefile.am  pizzatron.icns
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  pizzatron.pot
src/: Makefile.am  draw-text.c  path.c  path.h  pizzatron.c  pizzatron.rc  rotar.c
