gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/background.png \
	images/conveyorbelt.png \
	images/pizza_base_1.png \
	images/pizza_base_2.png \
	images/pizza_base_3.png \
	images/pizza_base_4.png \
	images/pizza_base_5.png \
	images/pizza_sprinkles.png \
	images/pizza_cheese.png \
	images/pizza_shadow.png \
	images/splat_mask.png \
	images/splat_choco.png \
	images/splat_hot.png \
	images/splat_pink.png \
	images/splat_sauce.png \
	images/base_sauces.png \
	images/chocolate.png \
	images/chocolate_squash_01.png \
	images/chocolate_squash_02.png \
	images/chocolate_squash_03.png \
	images/chocolate_squash_04.png \
	images/chocolate_squash_05.png \
	images/chocolate_squash_06.png \
	images/holder_a_1.png \
	images/holder_a_2.png \
	images/holder_a_3.png \
	images/holder_b.png \
	images/hot_sauce.png \
	images/hot_sauce_squash_01.png \
	images/hot_sauce_squash_02.png \
	images/hot_sauce_squash_03.png \
	images/hot_sauce_squash_04.png \
	images/hot_sauce_squash_05.png \
	images/hot_sauce_squash_06.png \
	images/hot_sauce_squash_07.png \
	images/hot_sauce_squash_08.png \
	images/pink_icing.png \
	images/pink_icing_squash_01.png \
	images/pink_icing_squash_02.png \
	images/pink_icing_squash_03.png \
	images/pink_icing_squash_04.png \
	images/pink_icing_squash_05.png \
	images/pink_icing_squash_06.png \
	images/sauce.png \
	images/sauce_squash_01.png \
	images/sauce_squash_02.png \
	images/sauce_squash_03.png \
	images/sauce_squash_04.png \
	images/sauce_squash_05.png \
	images/sauce_squash_06.png \
	images/cheese_box.png \
	images/cheese_hand.png \
	images/sprinkle_box.png \
	images/sprinkles_hand.png

