gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/background.png \
	images/conveyorbelt.png \
	images/pizza_base_1.png \
	images/pizza_base_2.png \
	images/pizza_base_3.png \
	images/pizza_base_4.png \
	images/pizza_base_5.png \
	images/pizza_sprinkles.png \
	images/pizza_cheese.png \
	images/pizza_shadow.png \
	images/splat_mask.png \
	images/splat_choco.png \
	images/splat_hot.png \
	images/splat_pink.png \
	images/splat_sauce.png \
	images/base_sauces.png \
	images/chocolate.png \
	images/chocolate_squash_01.png \
	images/chocolate_squash_02.png \
	images/chocolate_squash_03.png \
	images/chocolate_squash_04.png \
	images/chocolate_squash_05.png \
	images/chocolate_squash_06.png \
	images/holder_a_1.png \
	images/holder_a_2.png \
	images/holder_a_3.png \
	images/holder_b.png \
	images/hot_sauce.png \
	images/hot_sauce_squash_01.png \
	images/hot_sauce_squash_02.png \
	images/hot_sauce_squash_03.png \
	images/hot_sauce_squash_04.png \
	images/hot_sauce_squash_05.png \
	images/hot_sauce_squash_06.png \
	images/hot_sauce_squash_07.png \
	images/hot_sauce_squash_08.png \
	images/pink_icing.png \
	images/pink_icing_squash_01.png \
	images/pink_icing_squash_02.png \
	images/pink_icing_squash_03.png \
	images/pink_icing_squash_04.png \
	images/pink_icing_squash_05.png \
	images/pink_icing_squash_06.png \
	images/sauce.png \
	images/sauce_squash_01.png \
	images/sauce_squash_02.png \
	images/sauce_squash_03.png \
	images/sauce_squash_04.png \
	images/sauce_squash_05.png \
	images/sauce_squash_06.png \
	images/cheese_box.png \
	images/cheese_hand.png \
	images/sprinkle_box.png \
	images/sprinkles_hand.png \
	images/hand_topping_1_1.png \
	images/hand_topping_1_2.png \
	images/hand_topping_1_3.png \
	images/hand_topping_2_1.png \
	images/hand_topping_2_2.png \
	images/hand_topping_2_3.png \
	images/hand_topping_3_1.png \
	images/hand_topping_3_2.png \
	images/hand_topping_3_3.png \
	images/hand_topping_4_1.png \
	images/hand_topping_4_2.png \
	images/hand_topping_4_3.png \
	images/hand_topping_5_1.png \
	images/hand_topping_5_2.png \
	images/hand_topping_5_3.png \
	images/hand_topping_6_1.png \
	images/hand_topping_6_2.png \
	images/hand_topping_6_3.png \
	images/hand_topping_7_1.png \
	images/hand_topping_7_2.png \
	images/hand_topping_7_3.png \
	images/hand_topping_8_1.png \
	images/hand_topping_8_2.png \
	images/hand_topping_8_3.png \
	images/topping_1_1.png \
	images/topping_1_2.png \
	images/topping_1_3.png \
	images/topping_2_1.png \
	images/topping_2_2.png \
	images/topping_2_3.png \
	images/topping_3_1.png \
	images/topping_3_2.png \
	images/topping_3_3.png \
	images/topping_4_1.png \
	images/topping_4_2.png \
	images/topping_4_3.png \
	images/topping_5_1.png \
	images/topping_5_2.png \
	images/topping_5_3.png \
	images/topping_6_1.png \
	images/topping_6_2.png \
	images/topping_6_3.png \
	images/topping_7_1.png \
	images/topping_7_2.png \
	images/topping_7_3.png \
	images/topping_8_1.png \
	images/topping_8_2.png \
	images/topping_8_3.png \
	images/topping_1_box.png \
	images/topping_2_box.png \
	images/topping_3_box.png \
	images/topping_4_box.png \
	images/topping_5_box.png \
	images/topping_6_box.png \
	images/topping_7_box.png \
	images/topping_8_box.png

