gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/background.png \
	images/icon.png \
	images/conveyorbelt.png \
	images/pizza_base_clear.png \
	images/pizza_base.png \
	images/pizza_sprinkles.png \
	images/pizza_cheese.png \
	images/pizza_shadow.png \
	images/splat_mask.png \
	images/splat_choco.png \
	images/splat_hot.png \
	images/splat_pink.png \
	images/splat_sauce.png \
	images/base_sauces.png \
	images/chocolate.png \
	images/chocolate_squash_01.png \
	images/chocolate_squash_02.png \
	images/chocolate_squash_03.png \
	images/chocolate_squash_04.png \
	images/chocolate_squash_05.png \
	images/chocolate_squash_06.png \
	images/holder_a_1.png \
	images/holder_a_2.png \
	images/holder_a_3.png \
	images/holder_b.png \
	images/hot_sauce.png \
	images/hot_sauce_squash_01.png \
	images/hot_sauce_squash_02.png \
	images/hot_sauce_squash_03.png \
	images/hot_sauce_squash_04.png \
	images/hot_sauce_squash_05.png \
	images/hot_sauce_squash_06.png \
	images/hot_sauce_squash_07.png \
	images/hot_sauce_squash_08.png \
	images/pink_icing.png \
	images/pink_icing_squash_01.png \
	images/pink_icing_squash_02.png \
	images/pink_icing_squash_03.png \
	images/pink_icing_squash_04.png \
	images/pink_icing_squash_05.png \
	images/pink_icing_squash_06.png \
	images/sauce.png \
	images/sauce_squash_01.png \
	images/sauce_squash_02.png \
	images/sauce_squash_03.png \
	images/sauce_squash_04.png \
	images/sauce_squash_05.png \
	images/sauce_squash_06.png \
	images/cheese_box.png \
	images/cheese_hand.png \
	images/sprinkle_box.png \
	images/sprinkles_hand.png \
	images/hand_topping_1_1.png \
	images/hand_topping_1_2.png \
	images/hand_topping_1_3.png \
	images/hand_topping_2_1.png \
	images/hand_topping_2_2.png \
	images/hand_topping_2_3.png \
	images/hand_topping_3_1.png \
	images/hand_topping_3_2.png \
	images/hand_topping_3_3.png \
	images/hand_topping_4_1.png \
	images/hand_topping_4_2.png \
	images/hand_topping_4_3.png \
	images/hand_topping_5_1.png \
	images/hand_topping_5_2.png \
	images/hand_topping_5_3.png \
	images/hand_topping_6_1.png \
	images/hand_topping_6_2.png \
	images/hand_topping_6_3.png \
	images/hand_topping_7_1.png \
	images/hand_topping_7_2.png \
	images/hand_topping_7_3.png \
	images/hand_topping_8_1.png \
	images/hand_topping_8_2.png \
	images/hand_topping_8_3.png \
	images/topping_1_1.png \
	images/topping_1_2.png \
	images/topping_1_3.png \
	images/topping_2_1.png \
	images/topping_2_2.png \
	images/topping_2_3.png \
	images/topping_3_1.png \
	images/topping_3_2.png \
	images/topping_3_3.png \
	images/topping_4_1.png \
	images/topping_4_2.png \
	images/topping_4_3.png \
	images/topping_5_1.png \
	images/topping_5_2.png \
	images/topping_5_3.png \
	images/topping_6_1.png \
	images/topping_6_2.png \
	images/topping_6_3.png \
	images/topping_7_1.png \
	images/topping_7_2.png \
	images/topping_7_3.png \
	images/topping_8_1.png \
	images/topping_8_2.png \
	images/topping_8_3.png \
	images/topping_1_box.png \
	images/topping_2_box.png \
	images/topping_3_box.png \
	images/topping_4_box.png \
	images/topping_5_box.png \
	images/topping_6_box.png \
	images/topping_7_box.png \
	images/topping_8_box.png \
	images/overflow_chocolate.png \
	images/overflow_hot.png \
	images/overflow_pink.png \
	images/overflow_sauce.png \
	images/order_pizza.png \
	images/topping_order.png \
	images/candy_topping_order.png \
	images/checked.png \
	images/intro_new_background.png \
	images/intro_new_penguin.png \
	images/intro_new_top.png \
	images/intro_new_candy_lever.png \
	images/intro_new_explain.png \
	images/intro_old_background.png \
	images/intro_old_candy_lever.png \
	images/ending_1.png \
	images/ending_2.png \
	images/ending_3.png \
	images/ending_4.png \
	images/done.png \
	images/close_over.png \
	images/close_press.png \
	images/close_up.png \
	images/boton_1_over.png \
	images/boton_1_up.png \
	images/boton_2_over.png \
	images/boton_2_up.png \
	images/boton_3_over.png \
	images/boton_3_up.png \
	images/cheese_drop.png \
	images/sprinkles_drop.png \
	images/topping_1_1_dropped.png \
	images/topping_1_2_dropped.png \
	images/topping_1_3_dropped.png \
	images/topping_2_1_dropped.png \
	images/topping_2_2_dropped.png \
	images/topping_2_3_dropped.png \
	images/topping_3_1_dropped.png \
	images/topping_3_2_dropped.png \
	images/topping_3_3_dropped.png \
	images/topping_4_1_dropped.png \
	images/topping_4_2_dropped.png \
	images/topping_4_3_dropped.png \
	images/topping_5_1_dropped.png \
	images/topping_5_2_dropped.png \
	images/topping_5_3_dropped.png \
	images/topping_6_1_dropped.png \
	images/topping_6_2_dropped.png \
	images/topping_6_3_dropped.png \
	images/topping_7_1_dropped.png \
	images/topping_7_2_dropped.png \
	images/topping_7_3_dropped.png \
	images/topping_8_1_dropped.png \
	images/topping_8_2_dropped.png \
	images/topping_8_3_dropped.png \
	images/stamps/392.png \
	images/stamps/394.png \
	images/stamps/396.png \
	images/stamps/398.png \
	images/stamps/400.png \
	images/stamps/402.png \
	images/stamps/404.png \
	images/stamps/406.png \
	images/stamps/408.png \
	images/stamps/410.png \
	sounds/caching.wav \
	sounds/hotsauce.wav \
	sounds/overflow.wav \
	sounds/sauce.wav \
	sounds/throw.wav \
	sounds/topping.wav \
	sounds/sauce1.wav \
	sounds/sauce2.wav \
	music/music_106.ogg \
	music/music_270.ogg \
	music/music_344.ogg \
	music/music_385.ogg \
	burbanksb.ttf \
	burbanks.ttf \
	burbankbgbk.ttf \
	acmeexplosive.ttf \
	images/de/chocolate.png \
	images/de/chocolate_squash_01.png \
	images/de/chocolate_squash_02.png \
	images/de/chocolate_squash_03.png \
	images/de/chocolate_squash_04.png \
	images/de/chocolate_squash_05.png \
	images/de/chocolate_squash_06.png \
	images/de/hot_sauce.png \
	images/de/hot_sauce_squash_01.png \
	images/de/hot_sauce_squash_02.png \
	images/de/hot_sauce_squash_03.png \
	images/de/hot_sauce_squash_04.png \
	images/de/hot_sauce_squash_05.png \
	images/de/hot_sauce_squash_06.png \
	images/de/hot_sauce_squash_07.png \
	images/de/hot_sauce_squash_08.png \
	images/es/hot_sauce.png \
	images/es/hot_sauce_squash_01.png \
	images/es/hot_sauce_squash_02.png \
	images/es/hot_sauce_squash_03.png \
	images/es/hot_sauce_squash_04.png \
	images/es/hot_sauce_squash_05.png \
	images/es/hot_sauce_squash_06.png \
	images/es/hot_sauce_squash_07.png \
	images/es/hot_sauce_squash_08.png \
	images/fr/chocolate.png \
	images/fr/chocolate_squash_01.png \
	images/fr/chocolate_squash_02.png \
	images/fr/chocolate_squash_03.png \
	images/fr/chocolate_squash_04.png \
	images/fr/chocolate_squash_05.png \
	images/fr/chocolate_squash_06.png

# Instalar los archivos .desktop e iconos
applicationsdir = $(datadir)/applications
applications_DATA = desktop/pizzatron.desktop

icons24dir = $(datadir)/icons/hicolor/24x24/apps
icons24_DATA = desktop/24x24/pizzatron.png

icons32dir = $(datadir)/icons/hicolor/32x32/apps
icons32_DATA = desktop/32x32/pizzatron.png

icons48dir = $(datadir)/icons/hicolor/48x48/apps
icons48_DATA = desktop/48x48/pizzatron.png

icons64dir = $(datadir)/icons/hicolor/64x64/apps
icons64_DATA = desktop/64x64/pizzatron.png

icons128dir = $(datadir)/icons/hicolor/128x128/apps
icons128_DATA = desktop/128x128/pizzatron.png

icons256dir = $(datadir)/icons/hicolor/256x256/apps
icons256_DATA = desktop/256x256/pizzatron.png

# touch the toplevel icon directory as required by the icon theme spec
install-data-hook:
	touch $(DESTDIR)$(datadir)/icons/hicolor

EXTRA_DIST = \
	desktop/pizzatron.desktop \
	desktop/24x24/pizzatron.png \
	desktop/32x32/pizzatron.png \
	desktop/48x48/pizzatron.png \
	desktop/64x64/pizzatron.png \
	desktop/128x128/pizzatron.png \
	desktop/256x256/pizzatron.png \
	pizzatron.ico
